# ruststudy

./: Cargo.toml  README.md  cube.gltf
src/: frag.glsl  frag.glsl.spv  lib.rs  main.rs  vert.glsl  vert.glsl.spv
src/renderer/: camera.rs  gltfimporter.rs  light.rs  material.rs  mesh.rs  mod.rs  shader.rs  vertex.rs
