[package]
name = "rustgraphics"
version = "0.1.0"
authors = ["Jhonny Knaak de Vargas <jhonny.vargas@acad.pucrs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
winit = "0.22.0"
env_logger = "0.7.1"
nalgebra = "0.21.0"
futures = "0.3.4"
shaderc = "0.6.2"
zerocopy = "0.3.0"